# brahmahub

./: .editorconfig  .env.example  .gitattributes  .gitignore  CLAUDE.md  DEVELOPMENT.md  Makefile  README.md  cliff.toml  docker-compose.yml  lefthook.yml  mise.toml  pyproject.toml
.github/: CODEOWNERS  labeler.yml  pull_request_template.md  release-please-config.json
.github/workflows/: checks.yml  ci.yml  codeql.yml  pr.yml  release.yml
api/: config.py  database.py  main.py  models.py  requirements.txt
api/routers/: assets.py  ingest.py  media.py  packages.py  projects.py  search.py  stats.py  subjects.py  system.py
api/services/: analyzer.py  datasets.py  github_auth.py  metadata.py
cli/: pyproject.toml
cli/ingesthub_cli/: __init__.py  db.py  main.py  media.py
db/migrations/: 001_initial_schema.sql
deploy/: README.md  brahmahub-api.service
deploy/traefik/: dynamic.yml  traefik.env.example  traefik.service  traefik.yml
frontend/: biome.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
frontend/.lovable/: plan.md
frontend/src/: App.tsx  index.css
frontend/src/components/: AddPackageDialog.tsx  GlobalSearch.tsx  SubjectStats.tsx  VirtualizedAssetGrid.tsx
frontend/src/components/common/: BulkActionBar.tsx  CopyCommandButton.tsx  CopyPathBox.tsx  EmptyState.tsx  ErrorBoundary.tsx  PackageIndicators.tsx  PackageSummaryCard.tsx  PoseMatrix.tsx  SectionSummary.tsx  SourceVideoLink.tsx  StatusBadge.tsx  SubjectChip.tsx  TagChip.tsx  VersionBanner.tsx
frontend/src/components/layout/: AppBreadcrumb.tsx  AppLayout.tsx  AppSidebar.tsx
frontend/src/components/ui/: button.tsx  card.tsx  checkbox.tsx  command.tsx  pagination.tsx  skeleton.tsx  table.tsx
frontend/src/hooks/: useAssets.ts  useDashboard.ts  useIngest.ts  usePackages.ts  useProjects.ts  useSubjects.ts  useSystem.ts  useTableSelection.ts  useVersionCheck.ts
frontend/src/lib/: export.ts  formatters.ts  paths.ts  tagColors.ts  version.ts
frontend/src/lib/__tests__/: formatters.test.ts  paths.test.ts  version.test.ts
frontend/src/pages/: Dashboard.tsx  PackageDetail.tsx  PackageListPage.tsx  ProjectDetail.tsx  Projects.tsx  SubjectDetail.tsx  Subjects.tsx
frontend/src/services/: api.ts  assets.ts  ingest.ts  packages.ts  projects.ts  subjects.ts  system.ts
frontend/src/test/: setup.ts
frontend/src/types/: index.ts
tests/: conftest.py  test_assets.py  test_health.py  test_packages.py  test_projects.py  test_system.py
