[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ingesthub-cli"
version = "0.1.0"
description = "CLI tool for ingesting media data into IngestHub"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1",
    "psycopg2-binary>=2.9",
    "rich>=13.0",
    "Pillow>=10.0",
    "python-dotenv>=1.0",
]

[project.scripts]
ihub = "ingesthub_cli.main:cli"

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]
